fix mac add experimental linux code